--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    background-color: #800080;
+    background-color: purple;
     color: white;
     font-style: italic;
     text-align: center;
@@ -22,6 +22,8 @@ h2 {
     font-size: large;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
+    word-wrap: break-word;
+    
 }
 
 section {
@@ -31,14 +33,17 @@ section {
     margin-top: 12px;
 }
 
-/* .question-box {
-    box-sizing: content-box;
+#hover:hover {
+    background-color: purple;
+    color: white;
 
-} */
+}
 
-#stats div {
-    box-sizing: content-box;
-    border: green;
+#next {
+    text-align: center;
+    margin-left: 350px;
+    margin-right: 350px;
+    margin-top: 12px; 
 }
 
 button {
@@ -65,4 +70,35 @@ ul {
     display: block;
     justify-content: center;
     margin-left: 300px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 992px) {
+
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 576px) {
+
 }
