--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,22 @@
 :root {
-    margin-left: 300px;
-    margin-right: 300px;
+    /* margin-left: 325px;
+    margin-right: 325px; */
+    margin: 0 auto;
 }
 
-header {
-    background-color: purple;
+h1 {
+    background-color: rgb(078,042,132);
     color: white;
     font-style: italic;
     text-align: center;
-    font-size: large;
+    font-size: 34px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-left: 350px;
-    margin-right: 350px;
+    margin-left: 650px;
+    margin-right: 650px;
     margin-top: 50px;
     border-radius: 15px;
+    padding: 10px;
+    flex-wrap: wrap;
 
 }
 h2 {
@@ -22,7 +25,9 @@ h2 {
     font-size: large;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
-    word-wrap: break-word;
+    flex-wrap: wrap;
+    margin-left: 550px;
+    margin-right: 550px;
     
 }
 
@@ -33,11 +38,11 @@ section {
     margin-top: 12px;
 }
 
-#hover:hover {
+/* #hover:hover {
     background-color: purple;
     color: white;
 
-}
+} */
 
 #next {
     text-align: center;
@@ -46,32 +51,30 @@ section {
     margin-top: 12px; 
 }
 
-button {
-    text-align: left;
+.button {
+    text-align: center;
     display: block;
     cursor: pointer;
     background-color: rgb(191, 187, 187);
     color: black;
     font-size: small;
+    font-weight: bold;
     border-radius: 15px;
-    margin-top: 5px;
-    padding: 15px 15px;
-    position: middle;
-    width: 100%;
+    margin: 0 auto;
+    padding: 10px;
+    min-height: 30px;
+    min-width: 120px;
+}
+
+.button:hover {
+    background-color: rgb(078,042,132);
+    color: white;
 }
 
 div {
     text-align: center;
     margin-top: 10px;
 }
-
-ul {
-    text-align: left;
-    display: block;
-    justify-content: center;
-    margin-left: 300px;
-}
-
 
 
 
