worked through javascript code to start the quiz, start the timer, and cycle through questions after clicking either the right or wrong answer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,10 @@ section {
     min-width: 120px;
 }
 
+.hidden {
+    display: none;
+}
+
 .button:hover {
     background-color: rgb(078,042,132);
     color: white;
