fixed the incorrect prompt happening when you submit a correct answer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,10 @@ section {
     margin-top: 12px; 
 }
 
+.container {
+    display: block; 
+}
+
 .button {
     text-align: center;
     display: block;
