--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,27 +4,42 @@
     text-align: center;
 }
 
+h1 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(078, 042, 132);
+    color: white;
+    border-radius: 15px;
+}
 
+.start-button {
+    background-color: rgb(078, 042, 132);
+    color: white;
+    border: none;
+    margin-bottom: 10px;
+    border-radius: 15px;
+    padding:15px;
+    min-height:30px; 
+    min-width: 120px;
+    font-size: 20px;
+}
 
+.start-button:hover {
+    background-color: rgb(255, 255, 255);
+    color: rgb(078, 042, 132);
+    transition: 0.3s;
+}
 
+p {
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
+.scores {
+    border: 3px;
+    background-color: black;
+}
 
 .hidden {
     display: none;
@@ -32,4 +47,52 @@
 
 .visible {
     display: block;
+}
+.problem-box {
+    background-color: rgb(078, 042, 132);
+    display: block;
+    text-align: center;
+    color: white;
+    border: none;
+    margin-bottom: 10px;
+    border-radius: 15px;
+    padding:15px;
+    min-height:30px; 
+    min-width: 120px;
+    font-size: 20px;
+    
+}
+
+.problem-box:hover {
+    background-color: white;
+    color: rgb(078, 042, 132);
+    transition: 0.3s;
+}
+
+
+.countdown {
+    color: black;
+    border: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    padding:15px;
+    min-height:30px; 
+    min-width: 40px;
+    font-size: 20px;
+}
+
+.end-screen {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration: underline;
+    font-size: 200px;
+    color: black;
+}
+
+.score p{
+    font-size: 40px;
+    display: block;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border: 3px;
+    color: black;
 }
